Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment_Completion_Event__e/Assignment_Completion_Event__e.object-meta.xml
<CustomObject>
    <label>Assignment Completion Event</label>
    <pluralLabel>Assignment Completion Events</pluralLabel>
</CustomObject>