Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment_Completion_Event__e/fields/AssignmentId_c__c.field-meta.xml
<CustomField>
    <fullName>AssignmentId_c__c</fullName>
    <label>AssignmentId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>