Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Assignment_Completion_Event__e/fields/EmploeeId__c.field-meta.xml
<CustomField>
    <fullName>EmploeeId__c</fullName>
    <label>EmploeeId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>